--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* GENERAL STYLES */
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -7,6 +9,8 @@
 body {
   background-color: #d9dcd6;
 }
+
+/* HEADER */
 
 header {
   padding: 20px;
@@ -21,7 +25,7 @@ header h1 {
   font-size: 48px;
 }
 
-header h1 {
+header h1 .seo {
   color: #d9dcd6;
 }
 
@@ -33,7 +37,7 @@ header nav {
   font-size: 20px;
 }
 
-header div ul {
+header nav ul {
   list-style-type: none;
 }
 
@@ -41,6 +45,8 @@ header nav ul li {
   display: inline-block;
   margin-left: 25px;
 }
+
+/* TEXT STYLES */
 
 a {
   color: #ffffff;
@@ -51,6 +57,8 @@ p {
   font-size: 16px;
 }
 
+/* HERO DIV WITH BACKGROUND IMAGE */
+
 .hero {
   height: 800px;
   width: 100%;
@@ -59,6 +67,8 @@ p {
   background-size: cover;
   background-position: center;
 }
+
+/* FLOATS */
 
 .float-left {
   float: left;
@@ -70,11 +80,15 @@ p {
   margin-left: 25px;
 }
 
-.content {
+/* MAIN */
+
+main {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
+
+/* BENEFITS ASIDE */
 
 .benefits {
   margin-right: 20px;
@@ -87,55 +101,25 @@ p {
   background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefit-brand {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-cost {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-cost h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-lead img {
+.benefit img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
-.benefit-brand img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
+/* SERVICES SECTIONS */
 
-.benefit-cost img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.search-engine-optimization {
+.service {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -144,50 +128,16 @@ p {
   color: #ffffff;
 }
 
-.online-reputation-management {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.social-media-marketing {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.search-engine-optimization img {
+.service img {
   max-height: 200px;
 }
 
-.online-reputation-management img {
-  max-height: 200px;
-}
-
-.social-media-marketing img {
-  max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.service h2 {
   margin-bottom: 20px;
   font-size: 36px;
 }
 
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.social-media-marketing h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
+/* FOOTER */
 
 footer {
   padding: 30px;
